--- a/assets/style.css
+++ b/assets/style.css
@@ -85,6 +85,8 @@ button {
     background-color: #111111;
     overflow-x: hidden;
     transition: 0.5s;
+     padding-top: 15px;
+     transform: translateX(-250px);
 
 }
 
@@ -101,10 +103,15 @@ button {
     color: #f1f1f1;
   }
   
-  .sidenav .closebtn {
+.sidenav .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+  }
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
   }
