--- a/assets/style.css
+++ b/assets/style.css
@@ -72,7 +72,7 @@ footer p {
     color: (86, 202, 86);
 }
 
-#general-search {
+#general-search, #ingredients-search {
     margin: 0 auto;
     display: inline-block;
     width: 30%;
@@ -83,8 +83,10 @@ footer p {
     /* display:inline-block; */
 }
 
-.ingredientSearch {
+
+.generalSearch, .ingredientSearch {
     text-align: center;
+    
 }
 
 .btn-dark {
