--- a/assets/style.css
+++ b/assets/style.css
@@ -114,3 +114,8 @@ footer p {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
+
+
+  .main-result h3{
+    font-size: 18px;
+  }
