--- a/assets/signstyle.css
+++ b/assets/signstyle.css
@@ -64,9 +64,7 @@ button {
 }
 
 /* Bordered form */
-form {
-    border: 3px solid #f1f1f1;
-  }
+
   
   /* Full-width inputs */
   input[type=text], input[type=password] {
@@ -87,6 +85,7 @@ form {
     border: none;
     cursor: pointer;
     width: 100%;
+    transition: all .2s;
   }
   
   /* Add a hover effect for buttons */
@@ -99,18 +98,27 @@ form {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
+    color: #fff;
+    transition: all .2s;
   }
   
+.cancelbtn:hover {
+  color: #fff;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
   /* Center the avatar image inside this container */
   .imgcontainer {
     text-align: center;
-    margin: 24px 0 12px 0;
+    /* margin: 24px 0 12px 0; */
+    padding-top: 25px;
   }
   
   /* Avatar image */
   img.avatar {
-    width: 40%;
-    border-radius: 50%;
+    width: 250px;
+
   }
   
   /* Add padding to containers */
