--- a/assets/style.css
+++ b/assets/style.css
@@ -80,14 +80,29 @@ body {
     }
 }
 
+.card-header {
+    margin-bottom: 10px;
+    
+}
+
 .cardOne {
     margin-left:10%;
-   
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */ 
+    scroll-behavior: smooth;
+
 
 }
 
 .cardTwo {
-    margin-right:10%;   
+    margin-right:10%;  
+    overflow: hidden; 
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    scroll-behavior: smooth;
 
 }
 
@@ -240,3 +255,6 @@ footer p {
     display: none; 
   }
 
+li {
+    font-size: 14px;
+}
