--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,12 @@ body {
     background-color: #ffffff;
 }
 
+@media screen and (min-width: 1200px){
+    .main-container {
+        max-width: 90%;
+    }
+}
+
 .fade-out {
     display: flex;
     justify-content: center;
@@ -84,7 +90,6 @@ body {
 }
 
 .cardOne {
-    margin-left:10%;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -95,7 +100,6 @@ body {
 }
 
 .cardTwo {
-    margin-right:10%;  
     overflow: hidden; 
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
