--- a/assets/style.css
+++ b/assets/style.css
@@ -2,37 +2,37 @@
     font-family: 'Lemon/Milk Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Lemon/Milk Regular'), url('fonts/LemonMilk.otf') format('woff');
+    src: local('Lemon/Milk Regular'), url('../fonts/LemonMilk.woff') format('woff');
 }
 @font-face {
     font-family: 'Lemon/Milk Regular italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Lemon/Milk Regular italic'), url('fonts/LemonMilkitalic.otf') format('woff');
+    src: local('Lemon/Milk Regular italic'), url('../fonts/LemonMilkitalic.woff') format('woff');
 }
 @font-face {
     font-family: 'Lemon/Milk light italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Lemon/Milk light italic'), url('fonts/LemonMilklightitalic.otf') format('woff');
+    src: local('Lemon/Milk light italic'), url('../fonts/LemonMilklightitalic.woff') format('woff');
 }
 @font-face {
     font-family: 'Lemon/Milk Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Lemon/Milk Bold'), url('fonts/LemonMilkbold.otf') format('woff');
+    src: local('Lemon/Milk Bold'), url('../fonts/LemonMilkbold.woff') format('woff');
 }
 @font-face {
     font-family: 'Lemon/Milk Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Lemon/Milk Bold'), url('fonts/LemonMilkbolditalic.otf') format('woff');
+    src: local('Lemon/Milk Bold'), url('../fonts/LemonMilkbolditalic.woff') format('woff');
 }
 @font-face {
     font-family: 'Lemon/Milk light Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Lemon/Milk light Regular'), url('fonts/LemonMilklight.otf') format('woff');
+    src: local('Lemon/Milk light Regular'), url('../fonts/LemonMilklight.woff') format('woff');
 }
 
 body {
@@ -275,8 +275,10 @@ li {
     font-size: 14px;
 }
 
-@media (min-width: 576px)
-.modal-dialog {
-    max-width: 80%;
-    margin: 1.75rem auto;
+@media (min-width: 576px){
+
+    .modal-dialog {
+        max-width: 80%;
+        margin: 1.75rem auto;
+    }
 }
