recipe updates to page & style

--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,12 @@ body {
     }
 }
 
+.ingredient-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .card-header {
     margin-bottom: 10px;
     
