--- a/assets/style.css
+++ b/assets/style.css
@@ -91,7 +91,6 @@ body {
 }
 
 .cardOne {
-    margin-left:10%;
     overflow: hidden;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -102,7 +101,6 @@ body {
 }
 
 .cardTwo {
-    margin-right:10%;  
     overflow: hidden; 
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -153,6 +151,11 @@ body {
     background-color: #111111 !important;
 }
 
+@media screen and (min-width: 1200px){
+    .main-container {
+        max-width: 85% !important;
+    }
+}
 
 .btn-secondary {
     padding:2vh;   
