--- a/assets/style.css
+++ b/assets/style.css
@@ -252,6 +252,15 @@ footer p {
     align-items: center;
 }
 
+.ingredient p {
+    margin-bottom: 0;
+    font-size: 15px;
+    font-family: "Lemon/Milk Bold";
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #111111;
+}
+
 .removeIngredient {
     cursor: pointer;
     font-size: 20px;
