color of buttons on sign up and login to black

--- a/assets/signstyle.css
+++ b/assets/signstyle.css
@@ -48,7 +48,7 @@ body {
 }
 
 footer {
-    background-color:  rgb(86, 202, 86);
+    background-color: #111111;
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -57,8 +57,8 @@ footer {
 }
 
 button {
-    background-color: rgb(35, 185, 35);
-    border-color: rgb(35, 185, 35);
+    background-color: #111111;
+    border-color:  #111111;
     margin-top: 70vh;
     margin-left: 75vh;
 }
@@ -78,7 +78,7 @@ button {
   
   /* Set a style for all buttons */
   button {
-    background-color: #4CAF50;
+    background-color: #111111;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -97,7 +97,7 @@ button {
   .cancelbtn {
     width: auto;
     padding: 10px 18px;
-    background-color: #f44336;
+    background-color: #111111;
     color: #fff;
     transition: all .2s;
   }
